<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="added_favorite">Added to Favorites</string>
    <string name="app_name">File Explorer</string>
    <string name="cancel">Cancel</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="category_encrypt_music">Music</string>
    <string name="category_encrypt_picture">Pics</string>
    <string name="category_encrypt_video">Videos</string>
    <string name="category_encrypt_document">Docs</string>
    <string name="category_encrypt_apk">APKs</string>
    <string name="category_encrypt_other">Misc</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="instruction">Enter the following address into your FTP Client:</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New folder</string>
    <string name="no">No</string>
    <string name="no_file">No files</string>
    <string name="no_wifi">No Wi-Fi network</string>
    <string name="no_wifi_hint">No Wi-Fi network, press to check WiFi settings</string>
    <string name="notif_server_starting">FTP Server started</string>
    <string name="notif_title">FTP Server</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_encrypt">encrypt</string>
    <string name="operation_decrypt">decrypt</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="sd_folder">SD card</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="storage_warning">External storage is not available or cannot be read</string>
    <string name="tab_category">Browse</string>
    <string name="tab_remote">FTP</string>
    <string name="tab_sd">File</string>
    <string name="wifi_state">WLAN Status</string>
    <string name="yes">Yes</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SD Card</string>
    <string name="favourite_root">Root</string><string name="favorite_screen_cap">MIUI Screen Shot</string>
    <string name="favorite_ringtone">Ringtone</string>
    <string name="multi_select_title">Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
    <string name="menu_setting">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/storage/emulated/0</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
    
    <string name="storage_phone">Phone storage</string>
    <string name="percent">%</string>
    <string name="sd_percent">0%</string>
    <string name="sd_card_available">Available: %1$s</string>
    <string name="sd_card_size">SD card:%1$s</string>
    <string name="sd_info_storage">SD card</string>
    <string name="memory_available">Available: %1$s</string>
    <string name="memory_size">Memory:%1$s</string>
    <string name="interior_info_storage">Phone storage</string>
    <string name="storage_sd_card">SD card</string>
    <string name="encrypt">/加密/</string>
    <string name="encrypt_path">/storage/emulated/0/加密/</string>
    <string name="decrypt">/解密/</string>
    <string name="decrypt_path">/storage/emulated/0/解密/</string>
    <string name="decrypt_ccache">/解密/ccache/</string>
    <string name="decrypt_ccache_path">/storage/emulated/0/解密/ccache/</string>    
    
    <string name="safebox_first_start_txt_btn">Start</string>
	<string name="safebox_first_start_txt">To protect your privacy, you can encrypt your images, audios, videos, and documents .</string>    
	<string name="password_setting_hint_first">Please input number</string>
    <string name="password_setting_hint">Please input number or press fingerprint</string>
	<string name="password_setting_hint_secound">Please input Password</string>
	<string name="password_setting_complete">Done</string>
    <string name="password_setting_cancel">Cancel</string>
	<string name="input_password_origin">Please input origin Password</string>
	<string name="next_step_btn_text">Next</string>
	<string name="password_login_forget">Forget Password</string>
	<string name="password_setting_toast">两次输入的密码不一致，请重新输入</string>
	<string name="password_login_toast">密码输入错误，请重新输入</string>
	<string name="password_modify_toast">原密码输入错误，请重新输入</string>
	<string name="decrypt_btn_text">解密</string>
	<string name="encrypt_fist_start_activity_title">加密</string>
	<string name="encrypt_login_activity_title">加密</string> 	
	<string name="encrypt_password_setting_activity_title">密码设置</string>
	<string name="encrypt_password_modify_activity_title">修改密码</string>    
	<string name="encrypt_category_activity_title">加密文件</string>
	<string name="encrypt_password_modify_btn_text">设置</string>	
</resources>