<?xml version="1.0" encoding="utf-8"?>
<merge
  	xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView 
        android:id="@+id/safebox_password_and_question_setting_scrollview" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        
        <LinearLayout 
            android:orientation="vertical" 
            style="@style/safeboxFormContainer">
            
            <LinearLayout 
                android:gravity="center" 
                android:orientation="horizontal" 
                android:id="@+id/safebox_password_setting_edit_layout1" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                
                <EditText 
                    android:id="@+id/safebox_password_first" 
                    android:layout_width="0.0dip" 
                    android:layout_height="fill_parent" 
                    android:hint="@string/password_setting_hint_first" 
                    android:maxLines="1" 
                    android:password="true" 
                    android:singleLine="true" 
                    android:layout_weight="9.0" 
                    android:inputType="phone|textPassword" 
                    style="@style/safebox_edit_content" />
                
                <ImageButton 
                    android:id="@+id/display_password_setting_login_btn1" 
                    android:background="@android:color/transparent" 
                    android:layout_width="0.0dip" 
                    android:layout_height="fill_parent" 
                    android:src="@drawable/ic_password_invisible" 
                    android:layout_weight="1.0" 
                    android:layout_alignParentRight="true" 
                    android:layout_centerVertical="true" 
                    android:layout_gravity="center"/>
                
            </LinearLayout>
            
            <LinearLayout 
                android:gravity="center" 
                android:orientation="horizontal" 
                android:id="@+id/safebox_password_setting_edit_layout2" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                
                <EditText 
                    android:id="@+id/safebox_password_secound" 
                    android:layout_width="0.0dip" 
                    android:layout_height="fill_parent" 
                    android:hint="@string/password_setting_hint_secound" 
                    android:maxLines="1" 
                    android:password="true" 
                    android:singleLine="true" 
                    android:layout_weight="9.0" 
                    android:inputType="phone|textPassword" 
                    android:imeOptions="normal|actionUnspecified" 
                    android:imeActionId="@+id/login" 
                    style="@style/safebox_edit_content" />
                
                <ImageButton 
                    android:id="@+id/display_password_setting_login_btn2" 
                    android:background="@android:color/transparent" 
                    android:layout_width="0.0dip" 
                    android:layout_height="fill_parent" 
                    android:src="@drawable/ic_password_invisible" 
                    android:layout_weight="1.0" 
                    android:layout_alignParentRight="true" 
                    android:layout_centerVertical="true" 
                    android:layout_gravity="center"/>
                
            </LinearLayout>
            
            <Button 
                android:layout_gravity="center_horizontal" 
                android:id="@+id/safebox_password_and_question_setting_btn" 
                android:paddingLeft="32.0dip" 
                android:paddingRight="32.0dip" 
                android:layout_marginTop="360.0dip" 
                android:text="@string/password_setting_complete" 
                style="@style/SafeBoxButtonStyle" />
            
        </LinearLayout>
    </ScrollView>
</merge>